[build-system]
requires = ["setuptools", "wheel", "torch>=2.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-gaussian-rasterization"
version = "0.0.1"
dependencies = ["torch>=2.1.2"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
